--- a/src/app/pages/offcial/contact-form/contact-form.component.html
+++ b/src/app/pages/offcial/contact-form/contact-form.component.html
@@ -1,27 +1,81 @@
 <div class="container">
-  <h2 class="text-center mb-5">Angular Contact Form Hosted On FireBase</h2>
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <form [formGroup]="contactForm" (ngSubmit)="onSubmit(contactForm.value)">
-        <div class="form-group">
-          <label for="Email">Email</label>
-          <input type="email" class="form-control" name="Email" aria-describedby="emailHelp" placeholder="Enter email"
-            formControlName="Email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
-        <div class="form-group">
-          <label for="fullname">Full Name</label>
-          <input type="text" class="form-control" name="Fullname" placeholder="Full Name" formControlName="Fullname">
-        </div>
-        <div class="form-group">
-          <label for="comment">Comment</label>
-          <textarea class="form-control" formControlName="Comment" name="Comment">
-  </textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!contactForm.valid">Submit</button>
-
-        <button type="button"></button>
-      </form>
-    </div>
+  <h1>contact</h1>
+  <h2 class="text-center mb-5">お問い合わせフォーム(入力画面)</h2>
+  <p>ご意見・ご要望等、各種お問い合わせは、以下のフォームよりご連絡ください。</p>
+  <div class='attention'>
+    <p>
+      お問い合わせ内容によりましては、ご返信までお時間をいただく場合がございます、予めご了承ください。
+    </p>
   </div>
+
+  <form [formGroup]="contactForm" (ngSubmit)="sendMail()">
+    <mat-card>
+      <mat-card-content>
+        <mat-list>
+          <mat-list-item>
+            <mat-form-field appearance="outline">
+              <mat-label>メールアドレス</mat-label>
+              <input matInput formControlName="email" />
+            </mat-form-field>
+          </mat-list-item>
+
+          <mat-list-item>
+            <mat-form-field appearance="outline">
+              <mat-label>メールアドレス(確認用)</mat-label>
+              <input matInput formControlName="confirmEmail" />
+            </mat-form-field>
+          </mat-list-item>
+
+          <mat-list-item>
+            <mat-form-field appearance="outline">
+              <mat-label>お名前／ニックネーム</mat-label>
+              <input matInput formControlName="fullName" />
+            </mat-form-field>
+          </mat-list-item>
+
+          <mat-list-item>
+            <mat-form-field appearance="outline">
+              <mat-label>お問い合わせ種別</mat-label>
+              <mat-select formControlName="title">
+                <mat-option *ngFor="let option of optionSelect" [value]="option.value">
+                  {{option.label}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </mat-list-item>
+
+          <mat-list-item>
+            <mat-form-field appearance="outline">
+              <mat-label>お問い合わせ内容</mat-label>
+              <textarea matInput formControlName="message"></textarea>
+            </mat-form-field>
+          </mat-list-item>
+
+          <mat-list-item>
+            <p>ご記入いただく個人情報の取得に際しての同意事項</p>
+          </mat-list-item>
+          <mat-list-item>
+            <ol>
+              <li>事業者の名称、個人情報保護管理責任者等の職名、連絡先については、個人情報保護方針をご覧ください。
+              <li>当社はお問い合わせフォームで取得した個人情報を返信目的にのみ利用いたします。</li>
+              <li>なお返信目的に必要な限度において、当該個人情報について食べログ正規代理店へ提供する場合があります。または、返信目的に必要な限度において、当該個人情報の取扱いを当社業務委託先へ委託する場合があります。
+              </li>
+              <li>個人情報の利用目的の通知、開示、訂正、追加、削除等をお求めの場合は、「個人情報の取扱いについて」をご覧ください。</li>
+              <li>すべての項目にご記入いただけなかった場合、お問い合わせ内容に対する返信などにおいて、適切な対応ができなくなる場合がありますのでご了解ください。</li>
+            </ol>
+          </mat-list-item>
+
+          <mat-list-item class="check">
+            <mat-checkbox formControlName="agree">利用規約に同意する</mat-checkbox>
+          </mat-list-item>
+
+          <mat-list-item class="button">
+            <button mat-flat-button type="submit" color="primary" class="btn btn-primary"
+              [disabled]="!contactForm.valid">送信内容を確認</button>
+          </mat-list-item>
+        </mat-list>
+      </mat-card-content>
+    </mat-card>
+  </form>
+
 </div>
