upd1022 お問合せフォームvalidator

--- a/src/app/pages/offcial/contact-form/contact-form.component.html
+++ b/src/app/pages/offcial/contact-form/contact-form.component.html
@@ -23,6 +23,8 @@
             <mat-form-field appearance="outline">
               <mat-label>メールアドレス(確認用)</mat-label>
               <input matInput formControlName="confirmEmail" />
+              <mat-error *ngIf="contactForm.controls.confirmEmail.errors?.notMatchEmail">メールアドレスが一致しません
+              </mat-error>
             </mat-form-field>
           </mat-list-item>
 
