logo style pointer

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -39,6 +39,8 @@ header {
     width: 27vw; //42vw;
     margin-top: 2vw; //1vw
     margin-left: 16px;
+
+    cursor: pointer;
   }
 
   //@media screen and (min-width: 415px) and (max-width: 1024px) { 
