--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -199,19 +199,20 @@
             </div>
             <p class="m1">{{ "MyPlan#Sec4" | translate }}</p>
             <button mat-button class="search" (click)="onClickAddSpot()">{{"MyPlan#Sec5"|translate}}</button>
-            <!-- <p class='under'>{{ "MyPlan#notice" | translate }}</p> -->
+            
           </div>
           <ng-template #pcBlank>
             <div class='pcguide'>
               <p>{{ "NoSpot" | translate }}</p>
+              <p>{{ "NoSpot1" | translate }}</p>
               <p>{{ "NoSpot2" | translate }}</p>
             </div>
           </ng-template>
         </div>
       </div>
       <!-- スポットを追加する -->
-      <div *ngIf="row" class="myplan-box">
-        <button mat-button class="del-spot" [disabled]="!row?.planSpots"
+      <div *ngIf="row?.planSpots" class="myplan-box">
+        <button mat-button class="del-spot" [disabled]="!row?.planSpots" 
           (click)="onClickClearAllSpot()">{{"labelClear"|translate}}</button>
         <button mat-button class="add-spot" (click)="onClickAddSpot()" [ngClass]="{'blank':!isMobile}">
           <span class='label'>{{ "AddSpot" | translate }}</span>
